change background by map

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,18 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <mainClass>com.minhkakart.ninjaschool.Main</mainClass>
+                    <arguments>
+                        <argument>-Xms512m</argument>
+                        <argument>-Xmx1024m</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
